--- a/index.html
+++ b/index.html
@@ -1,39 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./index.css" />
     <title>BBC</title>
-</head>
-<body>
-    <div class="Tcontainer" style="color: white; padding-top: 50px;">
-        <h1>HOME</h1>
-        <h1>GUEST</h1>
+  </head>
+  <body>
+    <div class="Tcontainer" style="color: white; padding-top: 50px">
+      <h1>HOME</h1>
+      <h1>GUEST</h1>
     </div>
-    <div  class="container" style="padding-bottom: 20px;">
-        <div class="Display">
-            
-            <h1 id="Htext">0</h1>
-        </div>
-        <div class="Display">
-             <h1 id="Otext">0</h1>
-        </div>     
+    <div class="container" style="padding-bottom: 20px">
+      <div class="Display">
+        <h1 id="Htext">0</h1>
+      </div>
+      <div class="Display">
+        <h1 id="Otext">0</h1>
+      </div>
     </div>
 
     <div class="Bcontainer">
-        <div >
-            <button class="score" onclick="h1()">+1</button>
-            <button class="score" onclick="h2()">+2</button>
-            <button class="score" onclick="h3()">+3</button>
-        </div>
-        <div >
-            <button class="score" onclick="o1()">+1</button>
-            <button class="score" onclick="o2()">+2</button>
-            <button class="score" onclick="o3()">+3</button>
-        </div>
+      <div>
+        <button class="score" onclick="h1()">+1</button>
+        <button class="score" onclick="h2()">+2</button>
+        <button class="score" onclick="h3()">+3</button>
+      </div>
+      <div>
+        <button class="score" onclick="o1()">+1</button>
+        <button class="score" onclick="o2()">+2</button>
+        <button class="score" onclick="o3()">+3</button>
+      </div>
     </div>
     <script src="./index.js"></script>
-</body>
+  </body>
 </html>
